# mmrr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: base.yaml  cohesion.yaml  cohesion_debug.yaml  debug_cohesion.yaml  debug_mmref.yaml  default_cohesion.yaml  default_mmref.yaml  mmref.yaml  mmref_debug.yaml  test.yaml
configs/callbacks/: early_stopping_mmref.yaml
configs/datamodule/: cohesion_all.yaml  cohesion_jcre3.yaml  mmref_all.yaml  mmref_f30k.yaml  mmref_jcre3.yaml
configs/datamodule/base/: cohesion.yaml  mmref.yaml
configs/datamodule/predict/: cohesion.yaml  mmref.yaml
configs/datamodule/test/: f30k_mmref.yaml  fuman_cohesion.yaml  jcre3_cohesion.yaml  jcre3_mmref.yaml  wac_cohesion.yaml
configs/datamodule/test/cohesion/: kwdlc.yaml
configs/datamodule/test/mmref/: jcre3.yaml
configs/datamodule/train/: f30k_mmref.yaml  fuman_cohesion.yaml  jcre3_mmref.yaml  wac_cohesion.yaml
configs/datamodule/train/cohesion/: jcre3.yaml  kwdlc.yaml
configs/datamodule/train/mmref/: jcre3.yaml
configs/datamodule/valid/: fuman_cohesion.yaml  jcre3_cohesion.yaml  jcre3_mmref.yaml  kwdlc_cohesion.yaml  wac_cohesion.yaml
configs/datamodule/valid/mmref/: jcre3.yaml
configs/logger/: cohesion.yaml  mmref.yaml  wandb.yaml
configs/model/: base.yaml  cohesion_baseline.yaml  cohesion_camodel.yaml  cohesion_disentangled_lora.yaml  cohesion_single.yaml  cohesion_single_lora.yaml  mmref_baseline.yaml  mmref_disentangled_lora.yaml  mmref_grounding_dino_decoder.yaml
configs/module/: cohesion.yaml  mmref.yaml
configs/predict/: cohesion.yaml  mmref.yaml
configs/test/: cohesion.yaml  mmref.yaml
configs/trainer/: default.yaml
data/: categories.json
scripts/: run_cohesion.py  run_mmref.py  test.py  test_cohesion.py  test_mmref.py  train.py  utils.py
scripts/analysis/: plot_embeddings.py
scripts/predict/: run_cohesion.py
scripts/textual/: build_all_datasets.sh  build_dataset.py  build_datasets.sh  calc_jcre3_tags.py  constants.py  postprocess_ckpt.py
scripts/visual/: build_all_datasets.sh  build_dataset.py  build_jcre3.py  build_visual.py  calc_iou_mapper.py  convert_flickr_to_annotation.py  flickr30k_entities.py  postprocess.sh  preprocess.sh
src/: test.py  train.py
src/callbacks/: prediction_writer.py
src/cl_mmref/callbacks/: __init__.py  cohesion_writer.py  mmref_writer.py  prediction_writer.py
src/cl_mmref/cohesion_tools/: constants.py  task.py
src/cl_mmref/cohesion_tools/evaluators/: bridging.py  cohesion.py  mmref.py  utils.py  vis_coreference.py  vis_pas.py
src/cl_mmref/cohesion_tools/extractors/: __init__.py  mmref.py
src/cl_mmref/datamodule/: multitask_datamodule.py
src/cl_mmref/datamodule/example/: __init__.py  base.py  kyoto.py  mmref.py
src/cl_mmref/datasets/: base_dataset.py  cohesion_dataset.py  mmref_dataset.py
src/cl_mmref/metrics/: __init__.py  base.py  cohesion.py  mmref.py
src/cl_mmref/modules/: base.py  cohesion.py  mmref.py
src/cl_mmref/modules/model/: heads.py
src/cl_mmref/tools/: constants.py  task.py
src/cl_mmref/tools/evaluators/: __init__.py  cohesion.py  mm_coreference.py  mm_pas.py  mmref.py  utils.py  vis_coreference.py  vis_pas.py
src/cl_mmref/tools/extractors/: bridging.py  mmref.py
src/cl_mmref/utils/: annotation.py  dataset.py  prediction.py  util.py
src/cl_mmref/writer/: json.py  knp.py  mmref.py
src/cohesion_tools/: task.py
src/cohesion_tools/evaluators/: __init__.py  bridging.py  cohesion.py  coreference.py  mmref.py  pas.py  utils.py  vis_coreference.py  vis_pas.py
src/cohesion_tools/extractors/: __init__.py  base.py  bridging.py  coreference.py  mmref.py  pas.py
src/datamodule/: multitask_datamodule.py
src/datamodule/example/: __init__.py  base.py  kyoto.py  mmref.py
src/datasets/: __init__.py  base_dataset.py  cohesion_dataset.py  mmref_dataset.py
src/metrics/: __init__.py  cohesion.py  mmref.py
src/mmrr/callbacks/: cohesion_writer.py  mmref_writer.py
src/mmrr/datamodule/example/: __init__.py  base.py  kyoto.py  mmref.py
src/mmrr/datasets/: base_dataset.py  cohesion_dataset.py  mmref_dataset.py
src/mmrr/metrics/: cohesion.py  mmref.py
src/mmrr/modules/: __init__.py  base.py  cohesion.py  mmref.py
src/mmrr/modules/model/: loss.py  pooling.py
src/mmrr/tools/: constants.py
src/mmrr/tools/evaluators/: bridging.py  cohesion.py  coreference.py  mm_coreference.py  mm_pas.py  mmref.py  pas.py
src/mmrr/tools/extractors/: __init__.py  base.py  bridging.py  coreference.py  mmref.py  pas.py
src/mmrr/utils/: annotation.py  dataset.py  prediction.py  sub_document.py
src/mmrr/writer/: cohesion.py  knp.py  mmref.py
src/modules/: __init__.py  base.py  cohesion.py  debug.py  mmref.py
src/modules/model/: dist.py  loss.py
src/utils/: annotation.py  dataset.py  prediction.py  sub_document.py
src/writer/: json.py  knp.py  mmref.py
(+15 files in other folders)
